add SttDoc attributes and try connect to es

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,3 +9,10 @@ http {
   port = 7879
   port = ${?HTTP_PORT}
 }
+
+elasticsearch {
+  transport-address = "127.0.0.1"
+  transport-address = ${?ES_TRANSPORT_ADDRESS}
+  cluster-name = "elasticsearch"
+  cluster-name = ${?ES_CLUSTER_NAME}
+}
