--- a/deployment/manifests/rc.yml
+++ b/deployment/manifests/rc.yml
@@ -19,10 +19,15 @@ spec:
       - name: river
         image: 127.0.0.1:5000/inu/river:${version}
         ports:
-        - containerPort: 7879
+          - containerPort: 7879
         livenessProbe:
           httpGet:
             path: /ping
             port: 7879
           initialDelaySeconds: 15
           timeoutSeconds: 1
+        env:
+          - name: ES_TRANSPORT_ADDRESS
+            value: elasticsearch-discovery
+          - name: ES_CLUSTER_NAME
+            value: myesdb
