--- a/deployment/manifests/deploy.yml
+++ b/deployment/manifests/deploy.yml
@@ -10,7 +10,7 @@ spec:
         name: river
     spec:
       containers:
-      - name: nginx
+      - name: river
         image: 127.0.0.1:5000/inu/river:${version}
         ports:
         - containerPort: 7879
