configurable es tcp port 9300, bugfix index prefix logs and add additional fields

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,6 +15,8 @@ http {
 elasticsearch {
   transport-address = "127.0.0.1"
   transport-address = ${?ES_TRANSPORT_ADDRESS}
+  transport-tcp = 9300
+  transport-tcp = ${?ES_TRANSPORT_TCP}
   cluster-name = "elasticsearch"
   cluster-name = ${?ES_CLUSTER_NAME}
 }
