enforce assign Asia/Taipei time zone

--- a/deployment/manifests/rc.yml
+++ b/deployment/manifests/rc.yml
@@ -18,6 +18,8 @@ spec:
       containers:
       - name: river
         image: 127.0.0.1:5000/inu/river:${version}
+        args:
+          - -Duser.timezone=Asia/Taipei
         ports:
           - containerPort: 7879
         livenessProbe:
