remove enforce time zone & printout local time zone

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,3 +20,9 @@ elasticsearch {
   cluster-name = "elasticsearch"
   cluster-name = ${?ES_CLUSTER_NAME}
 }
+
+stt {
+  xml {
+    timezone = "Asia/Taipei"
+  }
+}
